SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Approver__c/CPQ_Playbook_Approver__c.object-meta.xml
<CustomObject>
    <description>Approver of a specific CPQ Playbook Approval</description>
    <label>CPQ Playbook Approver</label>
    <nameField>
        <label>Approver Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CPQ Playbook Approvers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>