SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Approver__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User to act as approver</description>
    <inlineHelpText>User to act as approver</inlineHelpText>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CPQ_Playbook_Approvers</relationshipName>
    <type>Lookup</type>
</CustomField>