SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Approver__c/fields/CPQ_Playbook_Approver_Group__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Playbook_Approver_Group__c</fullName>
    <description>CPQ Playbook Approver Group in which Approver is needed</description>
    <inlineHelpText>Playbook Approver Group in which Approver is needed</inlineHelpText>
    <label>CPQ Playbook Approver Group</label>
    <referenceTo>CPQ_Playbook_Approver_Group__c</referenceTo>
    <relationshipLabel>CPQ Playbook Approvers</relationshipLabel>
    <relationshipName>CPQ_Playbook_Approvers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>