SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Approver__c/fields/Manager_Approver__c.field-meta.xml
<CustomField>
    <fullName>Manager_Approver__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if the Approver should be the Manager of the Opportunity Owner</description>
    <inlineHelpText>Determines if the Approver should be the Manager of the Opportunity Owner. Overrides any User placed in the Approver field</inlineHelpText>
    <label>Manager Approver</label>
    <type>Checkbox</type>
</CustomField>